# RAG

./: .env.exmaple  .gitignore  README.md  pyproject.toml
src/: main.py
src/rag/data/: crawl_to_md.py
src/rag/data/input/: links.yaml
src/rag/embedding/: doc_embedding.py
